Spotless check