@@ -1,4 +1,8 @@
+/* Copyright 2019-2023 Appsmith */
 package com.external.config;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import com.appsmith.external.dtos.ExecuteActionDTO;
 import com.appsmith.external.exceptions.pluginExceptions.AppsmithPluginException;
@@ -10,7 +14,9 @@ import com.appsmith.external.models.PaginationType;
 import com.external.constants.ErrorMessages;
 import com.external.plugins.GoogleSheetsPlugin;
 import com.fasterxml.jackson.databind.ObjectMapper;
+
 import org.junit.jupiter.api.Test;
+
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
@@ -19,29 +25,24 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-
 public class RowsBulkAppendMethodTest {
     final ObjectMapper objectMapper = new ObjectMapper();
 
-    GoogleSheetsPlugin.GoogleSheetsPluginExecutor pluginExecutor = new GoogleSheetsPlugin.GoogleSheetsPluginExecutor();
+    GoogleSheetsPlugin.GoogleSheetsPluginExecutor pluginExecutor =
+            new GoogleSheetsPlugin.GoogleSheetsPluginExecutor();
 
-    /**
-     * To Test if it passes the empty Mono criteria,
-     * else it should fail
-     */
+    /** To Test if it passes the empty Mono criteria, else it should fail */
     @Test
     public void testBulkAppendHandleEmptyMonoExecutePrerequisites() {
         String[] testDataArray = {"[]", ""};
 
-        for(int i=0; i<testDataArray.length; i++) {
+        for (int i = 0; i < testDataArray.length; i++) {
             RowsBulkAppendMethod bulkAppend = new RowsBulkAppendMethod(objectMapper);
-            Mono<Object> monoTest = bulkAppend.executePrerequisites(getMethodConfigObject(testDataArray[i]), getOAuthObject());
+            Mono<Object> monoTest =
+                    bulkAppend.executePrerequisites(
+                            getMethodConfigObject(testDataArray[i]), getOAuthObject());
 
-            StepVerifier.create(monoTest)
-                    .expectComplete()
-                    .verify();
+            StepVerifier.create(monoTest).expectComplete().verify();
         }
     }
 
@@ -51,19 +52,36 @@ public class RowsBulkAppendMethodTest {
         DatasourceConfiguration datasourceConfiguration = new DatasourceConfiguration();
         datasourceConfiguration.setAuthentication(getOAuthObject());
 
-        Map<String,Object> formData = new HashMap<>();
-        formData.put("command", Collections.singletonMap("data","INSERT_MANY"));
-        formData.put("entityType", Collections.singletonMap("data","ROWS"));
-        formData.put("tableHeaderIndex", Collections.singletonMap("data","1"));
-        formData.put("projection", Collections.singletonMap("data",Collections.emptyList()));
-        formData.put("queryFormat", Collections.singletonMap("data","ROWS"));
-        formData.put("range", Collections.singletonMap("data",""));
-        formData.put("where", Collections.singletonMap("data",Map.of("condition","AND","children",Collections.singletonList(Collections.singletonMap("condition","LT")))));
-        formData.put("pagination",Collections.singletonMap("data",Map.of("limit",20,"offset",0)));
-        formData.put("smartSubstitution",Collections.singletonMap("data",true));
-        formData.put("sheetUrl",Collections.singletonMap("data","https://docs.google.com/spreadsheets/d/123/edit"));
-        formData.put("sheetName",Collections.singletonMap("data","portSheet"));
-        formData.put("sortBy",Collections.singletonMap("data",Collections.singletonList(Map.of("column","","order","Ascending"))));
+        Map<String, Object> formData = new HashMap<>();
+        formData.put("command", Collections.singletonMap("data", "INSERT_MANY"));
+        formData.put("entityType", Collections.singletonMap("data", "ROWS"));
+        formData.put("tableHeaderIndex", Collections.singletonMap("data", "1"));
+        formData.put("projection", Collections.singletonMap("data", Collections.emptyList()));
+        formData.put("queryFormat", Collections.singletonMap("data", "ROWS"));
+        formData.put("range", Collections.singletonMap("data", ""));
+        formData.put(
+                "where",
+                Collections.singletonMap(
+                        "data",
+                        Map.of(
+                                "condition",
+                                "AND",
+                                "children",
+                                Collections.singletonList(
+                                        Collections.singletonMap("condition", "LT")))));
+        formData.put(
+                "pagination", Collections.singletonMap("data", Map.of("limit", 20, "offset", 0)));
+        formData.put("smartSubstitution", Collections.singletonMap("data", true));
+        formData.put(
+                "sheetUrl",
+                Collections.singletonMap(
+                        "data", "https://docs.google.com/spreadsheets/d/123/edit"));
+        formData.put("sheetName", Collections.singletonMap("data", "portSheet"));
+        formData.put(
+                "sortBy",
+                Collections.singletonMap(
+                        "data",
+                        Collections.singletonList(Map.of("column", "", "order", "Ascending"))));
 
         ActionConfiguration actionConfiguration = new ActionConfiguration();
 
@@ -72,44 +90,63 @@ public class RowsBulkAppendMethodTest {
         actionConfiguration.setEncodeParamsToggle(true);
         actionConfiguration.setFormData(formData);
 
-        String[] testDataArray = {null,"","{}"};
+        String[] testDataArray = {null, "", "{}"};
 
-        String[] expectedErrorMessageArray = {ErrorMessages.EMPTY_ROW_ARRAY_OBJECT_MESSAGE,ErrorMessages.REQUEST_BODY_NOT_ARRAY,ErrorMessages.REQUEST_BODY_NOT_ARRAY};
+        String[] expectedErrorMessageArray = {
+            ErrorMessages.EMPTY_ROW_ARRAY_OBJECT_MESSAGE,
+            ErrorMessages.REQUEST_BODY_NOT_ARRAY,
+            ErrorMessages.REQUEST_BODY_NOT_ARRAY
+        };
 
-        for(int i=0; i<testDataArray.length; i++) {
+        for (int i = 0; i < testDataArray.length; i++) {
 
-            formData.put("rowObjects",new HashMap<>(Collections.singletonMap("data",testDataArray[i])));
+            formData.put(
+                    "rowObjects",
+                    new HashMap<>(Collections.singletonMap("data", testDataArray[i])));
 
-            AppsmithPluginException appsmithPluginException = assertThrows(AppsmithPluginException.class, () -> {
-                pluginExecutor.executeParameterized(null,new ExecuteActionDTO(),datasourceConfiguration,actionConfiguration);
-            });
+            AppsmithPluginException appsmithPluginException =
+                    assertThrows(
+                            AppsmithPluginException.class,
+                            () -> {
+                                pluginExecutor.executeParameterized(
+                                        null,
+                                        new ExecuteActionDTO(),
+                                        datasourceConfiguration,
+                                        actionConfiguration);
+                            });
 
             String actualMessage = appsmithPluginException.getMessage();
 
-            assertEquals(actualMessage,expectedErrorMessageArray[i]);
+            assertEquals(actualMessage, expectedErrorMessageArray[i]);
         }
     }
 
-   /**
+    /**
      * Simulated oAuth2 object, just to bypass few case.
+     *
      * @return
      */
-    private OAuth2 getOAuthObject(){
+    private OAuth2 getOAuthObject() {
         OAuth2 oAuth2 = new OAuth2();
-        oAuth2.setAuthenticationResponse(new AuthenticationResponse() );
+        oAuth2.setAuthenticationResponse(new AuthenticationResponse());
         oAuth2.getAuthenticationResponse().setToken("welcome123");
         oAuth2.setGrantType(OAuth2.Type.AUTHORIZATION_CODE);
-        oAuth2.setScopeString("https://www.googleapis.com/auth/spreadsheets.readonly,https://www.googleapis.com/auth/drive.readonly");
-        oAuth2.setScope(Set.of("https://www.googleapis.com/auth/spreadsheets.readonly","https://www.googleapis.com/auth/drive.readonly"));
+        oAuth2.setScopeString(
+                "https://www.googleapis.com/auth/spreadsheets.readonly,https://www.googleapis.com/auth/drive.readonly");
+        oAuth2.setScope(
+                Set.of(
+                        "https://www.googleapis.com/auth/spreadsheets.readonly",
+                        "https://www.googleapis.com/auth/drive.readonly"));
         return oAuth2;
     }
 
     /**
      * Simulated MethodConfig object with testable data.
+     *
      * @param rowObject
      * @return
      */
-    private  MethodConfig getMethodConfigObject(String rowObject) {
+    private MethodConfig getMethodConfigObject(String rowObject) {
         MethodConfig methodConfig = new MethodConfig(Map.of());
 
         methodConfig.setRowObjects(rowObject);
